--- a/crypto-dash/src/index.css
+++ b/crypto-dash/src/index.css
@@ -1,26 +1,112 @@
 body {
-  margin: 0;
+  margin: auto;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #030118;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-.app{
+.dashboard{
+  display: flex;
+  flex-direction: column;
+  background-image: url(/public/bg_ellipse.svg);
+  background-size: cover;
+}
+.landing{
   display: flex;
   flex-direction: row;
+  justify-content: center;
   align-items: center;
 }
 .newsFeed {
   display: flex;
   flex-direction: column;
+  margin: 0 5%;
+  padding: 24px;
+}
+
+.newsBackground {
+  background: linear-gradient(189.02deg, rgba(255, 252, 252, 0.2) 3.01%, rgba(255, 252, 252, 0.092) 95.64%);
+  border-radius: 16px;
 }
 
 .currencyConverter {
+  color: white;
   font-weight: 700;
+  padding: 24px;
+  margin-left: 5%;
+}
+.converterBackground {
+  background: linear-gradient(42.78deg, rgba(255, 255, 255, 0.1) 6.45%, rgba(255, 255, 255, 0.022) 92.3%);
+  border: 1px solid rgba(14, 215, 215, 0.34);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  backdrop-filter: blur(20px);
+  /* Note: backdrop-filter has minimal browser support */
+  border-radius: 16px;
+}
+
+.emptySpace1 {
+ height: 100px;
+}
+
+.exchangeRateContainer{
+  background: rgba(255, 254, 254, 0.08);
+  backdrop-filter: blur(200px);
+  border-radius: 12px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+}
+.tagLine {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  text-align: left;
+  padding-top: 45px;
+  padding-bottom: 10px;
+}
+.convertButtonContainer {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  margin-top: 52px;
+}
+.convertButton {
+  background: rgba(255, 254, 254, 0.15);
+  backdrop-filter: blur(200px);
+  border-radius: 6px;
+  color: white;
+  width: auto;
+  height: auto;
+  padding: 6px 24px;
+  font-weight: 600;
+  font-size: 16px;
+  text-align: center;
+  border: none;
+}
+.inputField {
+  background: rgba(255, 254, 254, 0.1);
+  border-radius: 6px;
+  color: white;
+  padding: 4px 6px;
+  text-align: left;
+  align-items: center;
+  border: none;
+}
+.currencyOptions {
+  background: rgba(255, 254, 254, 0.15);
+  border-radius: 6px;
+  color: white;
+  padding: 4px 8px;
+  border: none;
+}
+.currencyRow {
+  padding-top: 32px;
 }
