--- a/crypto-dash/src/index.css
+++ b/crypto-dash/src/index.css
@@ -6,6 +6,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #030118;
+  height: 100vh;
+  width: 100vw;
 }
 
 code {
@@ -17,12 +19,26 @@ code {
   flex-direction: column;
   background-image: url(/public/bg_ellipse.svg);
   background-size: cover;
+  height: 100%;
+  width: 100%;
+}
+.dashboardContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+}
+.dashboardTitle{
+  text-align: center;
+  padding-bottom: 5%;
+  color: white;
+  margin: auto;
+  align-items: center;
 }
 .landing{
   display: flex;
   flex-direction: row;
   justify-content: center;
-  align-items: center;
 }
 .newsFeed {
   display: flex;
@@ -62,7 +78,8 @@ code {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  align-items: center;
+  align-items:center;
+  text-align: left;
 }
 .tagLine {
   font-style: normal;
@@ -91,6 +108,11 @@ code {
   text-align: center;
   border: none;
 }
+.convertButton:hover {
+  border: 1px solid rgba(14, 215, 215, 0.34);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+
+}
 .inputField {
   background: rgba(255, 254, 254, 0.1);
   border-radius: 6px;
@@ -106,7 +128,16 @@ code {
   color: white;
   padding: 4px 8px;
   border: none;
+  outline: none;
 }
 .currencyRow {
   padding-top: 32px;
+}
+.optionRow {
+  background: #030118;
+  border-radius: 6px;
+  outline:none;
+}
+.exchangeRateText {
+  margin: 0;
 }
